--- a/datn-frontend/src/components/My-OrderDetail/index.scss
+++ b/datn-frontend/src/components/My-OrderDetail/index.scss
@@ -29,7 +29,8 @@
   margin-inline-start: 0;
   margin-inline-end: 8px;
   font-size: 24px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
+  font-family:
+    -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   line-height: 50px;
   text-align: center;
