--- a/datn-frontend/src/components/Footer-HomePage/Footer-HomePage.module.scss
+++ b/datn-frontend/src/components/Footer-HomePage/Footer-HomePage.module.scss
@@ -3,6 +3,7 @@
   background-size: cover;
   position: relative;
   color: white;
+  margin-top: 32px;
   .footer_cover {
     position: absolute;
     width: 100%;
