--- a/datn-frontend/src/components/PopupDetailProduct/PopupDetailProduct.module.scss
+++ b/datn-frontend/src/components/PopupDetailProduct/PopupDetailProduct.module.scss
@@ -6,7 +6,7 @@
   left: 0;
   background: gray;
   opacity: 0.7;
-  z-index: 1;
+  z-index: 9990;
 }
 
 /*customize input radio*/
@@ -68,4 +68,15 @@
 }
 .popup_body::-webkit-scrollbar-thumb {
   background: #888888;
+}
+
+/* Hide native number input spinners (up/down icons) for the quantity input */
+.amount::-webkit-outer-spin-button,
+.amount::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.amount {
+  -moz-appearance: textfield; /* Firefox */
 }
